syntax = "proto3";
package post;

service PostService {
  rpc getAllPosts(Empty) returns (PostList) {}
  rpc getAllPostsByImpacterId(ImpacterId) returns (PostList) {}
  rpc getPost(PostId) returns (Post) {}
  rpc CreatePost(NewPost) returns (Post) {}
  rpc UpdatePost(Post) returns (Result) {}
  rpc deletePost(PostId) returns (Result) {}
}

message Media {
  string image = 1;
  int32 width = 2;
  int32 height = 3;
  string version = 4;
  string description = 5;
}

message Data {
  repeated Media media = 1;
}

message Empty {}

message PostList {
  repeated Post posts = 1;
}

message ImpacterId {
  int32 impacter_id = 1;
}

message PostId {
    int32 post_id = 1;
}

message Post {
  int32 post_id = 1;
  string description = 2;
  string type = 3;
  string status = 4;
  int32 impacter_id = 5;
  int32 reaction_count = 6;
  string created_at = 7;
  string updated_at = 8;
  Data data = 9;
}

message NewPost {
    string description = 2;
    string type = 3;
    string status = 4;
    int32 impacter_id = 5;
    string reaction_count = 6;
    Data data = 9;
}

message Result {
    string status = 1;
}